# graph-aml-case-triage

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
app/pages/: 01_Overview.py  02_Alert_Queue.py  03_Case_Queue.py  04_Case_Detail.py  05_Graph_View.py  06_Account_Profile.py  07_Model_Metrics.py  08_Audit_Log.py  09_Validation_Report.py
config/: dashboard.yaml  database.yaml  demo.yaml  governance.yaml  graph.yaml  model.yaml  neo4j.yaml  paths.yaml  project.yaml  release.yaml  rules.yaml  scoring.yaml  security.yaml
data/bronze/: accounts.csv  counterparties.csv  countries.csv  customers.csv  devices.csv  scenario_manifest.csv
data/gold/: account_anomaly_scores.parquet  account_risk_scores.parquet  alerts.parquet  audit_events.parquet  (+12 more)
docs/: account_feature_engineering.md  alert_schema.md  aml_typologies.md  configuration.md  data_dictionary.md  data_validation.md  database_utilities.md  dataset_summary.md  developer_workflow.md  governance_framework.md  graph_model.md  local_infrastructure.md  model_validation.md  observability.md  portfolio_walkthrough.md  postgresql_schemas.md  postgresql_tables.md  raw_ingestion.md  rule_engine.md  staging_transformations.md
scripts/: __init__.py  alerts.py  build_gold_from_silver.py  cases.py  dashboard.py  db.py  demo.py  detect_circular_flows.py  dev.py  export_gold.py  generate_account_features.py  generate_data_dictionary.py  generate_rule_documentation.py  governance.py  graph.py  ingest_raw.py  labels.py  models.py  release.py  run_aml_rules.py  run_circular_flow_rule.py  run_dormant_reactivation_rule.py  run_fan_in_rule.py  run_fan_out_rule.py  run_rapid_movement_rule.py  run_structuring_rule.py  scoring.py  security.py  stage_data.py  transform_to_parquet.py
tests/: __init__.py  conftest.py  test_account_feature_artefacts.py  test_account_feature_audit.py  test_account_feature_calculation.py  test_account_feature_cli.py  test_account_feature_config_and_windows.py  test_account_feature_mart_readers.py  test_account_feature_persistence_preparation.py  test_account_feature_persistence_upsert.py  test_account_feature_persistence_workflow.py  test_account_feature_preparation.py  test_account_feature_staged.py  test_account_feature_summary.py  test_account_feature_table.py  test_alert_audit.py  test_alert_cli.py  test_alert_dataframe.py  test_alert_ids.py  test_alert_persistence.py  test_alert_persistence_workflow.py  test_alert_readers.py  test_alert_schema.py  test_alert_summary.py  test_alert_validation.py  test_behavioural_features.py  test_case_evidence_artefacts.py  test_case_evidence_audit.py  test_case_evidence_builders.py  test_case_evidence_config.py  test_case_evidence_database_tables.py  test_case_evidence_inputs.py  test_case_evidence_persistence.py  test_case_evidence_readers.py  test_case_evidence_validation_summary.py  test_case_evidence_workflow.py  test_case_explanations.py  test_case_lifecycle_config.py  test_case_lifecycle_database_tables.py  test_case_lifecycle_models.py  (+353 more)
(+321 files in other folders)
